@@ -11,6 +11,7 @@
 * Openpay: Allow currency to be specified [darkaz]
 * DataCash: Use API version 2 [curiousepic]
 * Stripe: Support verify_credentials [duff]
+* AuthorizeNet: Support verify_credentials [duff]
 
 
 == Version 1.59.0 (May 18, 2016)
